Webpack configuration division

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     // Подсвечивает все места, где у переменных не указан тип
     "noImplicitAny": true,
     "module": "ESNext",
+    // Для абсолютных путей
+    "baseUrl": ".",
     // во что код компилируется (для поддержки большинства браузеров)
     "target": "es5",
     "jsx": "react",
