--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,10 +21,12 @@
     "esModuleInterop": true,
     // Позволяет импортировать без * as
     "allowSyntheticDefaultImports": true
+    // "include": ["./config/jest/jest-setup", "./src/**/*"]
   },
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
     }
   }
+  // "include": [".config/jest/setupTests.ts"]
 }
