--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
     "compilerOptions": {
       "module": "CommonJS"
     }
-  }
-  // "include": [".config/jest/setupTests.ts"]
+  },
+  "include": [".config/jest/setupTests.ts", "./src/**/*.ts", "./src/**/*.tsx"]
 }
