--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
     "storybook:build": "build-storybook -c ./config/storybook",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "add:slice": "node .\\scripts\\createSlice\\index.js"
   },
   "keywords": [],
   "author": "",
@@ -56,6 +57,7 @@
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "^0.8.3",
     "concurrently": "^8.2.2",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.6.0",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -88,6 +90,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
     "i18next": "^21.6.11",
@@ -113,3 +116,4 @@
     }
   }
 }
+
