--- a/package.json
+++ b/package.json
@@ -31,26 +31,26 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "7.17.5",
-    "@babel/plugin-transform-runtime": "7.25.9",
-    "@babel/plugin-transform-typescript": "7.25.9",
+    "@babel/plugin-transform-runtime": "7.18.10",
+    "@babel/plugin-transform-typescript": "7.18.12",
     "@babel/preset-env": "7.16.11",
     "@babel/preset-react": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
-    "@storybook/addon-actions": "6.5.13",
-    "@storybook/addon-essentials": "6.5.13",
-    "@storybook/addon-interactions": "6.5.13",
-    "@storybook/addon-links": "6.5.13",
-    "@storybook/builder-webpack5": "6.5.13",
-    "@storybook/manager-webpack5": "6.5.13",
-    "@storybook/react": "6.5.13",
-    "@storybook/testing-library": "0.0.13",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.5",
+    "@storybook/addon-actions": "6.4.19",
+    "@storybook/addon-essentials": "6.4.19",
+    "@storybook/addon-interactions": "6.4.19",
+    "@storybook/addon-links": "6.4.19",
+    "@storybook/builder-webpack5": "6.4.19",
+    "@storybook/manager-webpack5": "6.4.19",
+    "@storybook/react": "6.4.19",
+    "@storybook/testing-library": "0.0.9",
     "@svgr/webpack": "6.2.1",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.3",
-    "@testing-library/user-event": "14.5.2",
-    "@types/circular-dependency-plugin": "5.0.8",
+    "@testing-library/user-event": "14.3.0",
+    "@types/circular-dependency-plugin": "5.0.5",
     "@types/jest": "27.4.1",
-    "@types/lodash": "4.17.12",
     "@types/node": "17.0.21",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
@@ -64,29 +64,27 @@
     "babel-loader": "8.2.3",
     "babel-plugin-i18next-extract": "0.8.3",
     "circular-dependency-plugin": "5.2.2",
-    "concurrently": "8.2.2",
-    "copy-webpack-plugin": "12.0.2",
+    "copy-webpack-plugin": "10.2.4",
     "css-loader": "6.6.0",
     "eslint": "8.10.0",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-plugin-fsd-arch-path": "0.0.7",
-    "eslint-plugin-fsd-plugin": "0.0.0",
+    "eslint-plugin-fsd-arch-path": "^0.0.10",
     "eslint-plugin-i18next": "5.1.2",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.2",
     "eslint-plugin-react-hooks": "4.3.0",
     "file-loader": "6.2.0",
-    "fork-ts-checker-webpack-plugin": "9.0.2",
+    "fork-ts-checker-webpack-plugin": "7.2.13",
     "html-webpack-plugin": "5.5.0",
-    "husky": "8.0.0",
+    "husky": "7.0.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.5.1",
-    "jest-html-reporters": "3.1.7",
+    "jest-html-reporters": "3.0.10",
     "json-server": "0.17.0",
     "loki": "0.28.1",
     "mini-css-extract-plugin": "2.5.3",
-    "react-docgen-typescript-plugin": "1.0.8",
+    "react-refresh": "0.12.0",
     "reg-cli": "0.17.6",
     "regenerator-runtime": "0.13.9",
     "sass": "1.49.9",
@@ -96,9 +94,9 @@
     "stylelint": "14.5.3",
     "stylelint-config-standard-scss": "3.0.0",
     "ts-loader": "9.2.6",
-    "ts-morph": "24.0.0",
+    "ts-morph": "16.0.0",
     "ts-node": "10.5.0",
-    "typescript": "5.6.3",
+    "typescript": "4.5.5",
     "vite": "3.1.0",
     "vite-plugin-svgr": "2.2.1",
     "webpack": "5.69.1",
@@ -108,16 +106,17 @@
   },
   "dependencies": {
     "@headlessui/react": "1.6.6",
-    "@react-spring/web": "9.7.5",
+    "@react-spring/web": "9.5.2",
     "@reduxjs/toolkit": "1.8.0",
-    "@use-gesture/react": "10.3.1",
+    "@use-gesture/react": "10.2.19",
     "axios": "0.26.1",
+    "concurrently": "7.0.0",
     "i18next": "21.9.0",
     "i18next-browser-languagedetector": "6.1.3",
     "i18next-http-backend": "1.3.2",
-    "react": "17.0.2",
-    "react-device-detect": "2.2.3",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-device-detect": "2.2.2",
+    "react-dom": "18.2.0",
     "react-i18next": "11.18.3",
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.1"
@@ -136,4 +135,3 @@
     }
   }
 }
-
