--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/preset-typescript": "7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.5",
     "@storybook/addon-actions": "6.4.19",
+    "storybook-addon-themes": "6.1.0",
     "@storybook/addon-essentials": "6.4.19",
     "@storybook/addon-interactions": "6.4.19",
     "@storybook/addon-links": "6.4.19",
