--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
     "storybook:build": "build-storybook -c ./config/storybook",
     "prepare": "husky install",
-    "add:slice": "node .\\scripts\\createSlice\\index.js"
+    "add:slice": "node .\\scripts\\createSlice\\index.js",
+    "postinstall": "rimraf ./node_modules/.cache"
   },
   "keywords": [],
   "author": "",
