--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@babel/preset-typescript": "7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.5",
     "@storybook/addon-actions": "6.4.19",
-    "storybook-addon-themes": "6.1.0",
     "@storybook/addon-essentials": "6.4.19",
     "@storybook/addon-interactions": "6.4.19",
     "@storybook/addon-links": "6.4.19",
@@ -49,7 +48,7 @@
     "@storybook/testing-library": "0.0.9",
     "@svgr/webpack": "6.2.1",
     "@testing-library/jest-dom": "5.16.2",
-    "@testing-library/react": "12.1.3",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "14.3.0",
     "@types/circular-dependency-plugin": "5.0.5",
     "@types/jest": "27.4.1",
@@ -93,6 +92,7 @@
     "sass": "1.49.9",
     "sass-loader": "12.6.0",
     "storybook-addon-mock": "2.4.1",
+    "storybook-addon-themes": "6.1.0",
     "style-loader": "3.3.1",
     "stylelint": "14.5.3",
     "stylelint-config-standard-scss": "3.0.0",
@@ -138,4 +138,3 @@
     }
   }
 }
-
