--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@storybook/testing-library": "0.0.9",
     "@svgr/webpack": "6.2.1",
     "@testing-library/jest-dom": "5.16.2",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.3.0",
     "@types/circular-dependency-plugin": "5.0.5",
     "@types/jest": "27.4.1",
@@ -75,7 +75,7 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.2",
     "eslint-plugin-react-hooks": "4.3.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-plugin-unused-imports": "2.0.0",
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "7.2.13",
     "html-webpack-plugin": "5.5.0",
@@ -84,6 +84,7 @@
     "jest": "27.5.1",
     "jest-html-reporters": "3.0.10",
     "json-server": "0.17.0",
+    "lint-staged": "13.0.3",
     "loki": "0.28.1",
     "mini-css-extract-plugin": "2.5.3",
     "react-refresh": "0.12.0",
@@ -136,5 +137,9 @@
         "preset": "iPhone 7"
       }
     }
+  },
+  "lint-staged": {
+    "**/*.{ts,tsx}": "eslint"
   }
 }
+
