--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": "stylelint-config-standard-scss",
   "rules": {
-    "indentSize": [4],
+    "indentation": [4],
     "selector-class-pattern": null
   }
 }
