fix storybook building

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
     runs-on: ubuntu-latest
     concurrency: ci-${{ github.ref }}
     environment:
-      name: githubpages
+      name: github
       url: ${{ steps.deployment.outputs.page_url }}
     strategy:
       matrix:
