--- a/package.json
+++ b/package.json
@@ -38,20 +38,20 @@
     "@babel/preset-react": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.5",
-    "@storybook/addon-actions": "6.4.19",
-    "@storybook/addon-essentials": "6.4.19",
-    "@storybook/addon-interactions": "6.4.19",
-    "@storybook/addon-links": "6.4.19",
-    "@storybook/builder-webpack5": "6.4.19",
-    "@storybook/manager-webpack5": "6.4.19",
-    "@storybook/react": "6.4.19",
-    "@storybook/testing-library": "0.0.9",
+    "@storybook/addon-actions": "6.5.13",
+    "@storybook/addon-essentials": "6.5.13",
+    "@storybook/addon-interactions": "6.5.13",
+    "@storybook/addon-links": "6.5.13",
+    "@storybook/builder-webpack5": "6.5.13",
+    "@storybook/manager-webpack5": "6.5.13",
+    "@storybook/react": "6.5.13",
     "@svgr/webpack": "6.2.1",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.3.0",
     "@types/circular-dependency-plugin": "5.0.5",
     "@types/jest": "27.4.1",
+    "@types/lodash": "^4.14.74",
     "@types/node": "17.0.21",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
@@ -69,12 +69,13 @@
     "css-loader": "6.6.0",
     "eslint": "8.10.0",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-plugin-fsd-arch-path": "0.0.11",
+    "eslint-plugin-fsd-arch-path": "^0.0.14",
     "eslint-plugin-i18next": "5.1.2",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.2",
     "eslint-plugin-react-hooks": "4.3.0",
+    "eslint-plugin-storybook": "0.6.7",
     "eslint-plugin-unused-imports": "2.0.0",
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "7.2.13",
@@ -92,7 +93,7 @@
     "regenerator-runtime": "0.13.9",
     "sass": "1.49.9",
     "sass-loader": "12.6.0",
-    "storybook-addon-mock": "2.4.1",
+    "storybook-addon-mock": "3.2.0",
     "storybook-addon-themes": "6.1.0",
     "style-loader": "3.3.1",
     "stylelint": "14.5.3",
@@ -105,13 +106,13 @@
     "vite-plugin-svgr": "2.2.1",
     "webpack": "5.69.1",
     "webpack-bundle-analyzer": "4.5.0",
-    "webpack-cli": "4.9.2",
+    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "4.7.4"
   },
   "dependencies": {
     "@headlessui/react": "1.6.6",
     "@react-spring/web": "9.5.2",
-    "@reduxjs/toolkit": "1.8.0",
+    "@reduxjs/toolkit": "^1.9.0",
     "@use-gesture/react": "10.2.19",
     "axios": "0.26.1",
     "concurrently": "7.0.0",
@@ -122,7 +123,7 @@
     "react-device-detect": "2.2.2",
     "react-dom": "18.2.0",
     "react-i18next": "11.18.3",
-    "react-redux": "7.2.6",
+    "react-redux": "^8.0.5",
     "react-router-dom": "6.2.1"
   },
   "loki": {
@@ -142,4 +143,3 @@
     "**/*.{ts,tsx}": "eslint"
   }
 }
-
