addded e2e tests for project. Cypress

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
     "test:ui:json": "node scripts/generate-visual-json-reports.js",
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
+    "test:e2e": "cypress open",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
     "storybook:build": "build-storybook -c ./config/storybook",
     "prepare": "husky install",
@@ -67,6 +68,7 @@
     "circular-dependency-plugin": "5.2.2",
     "copy-webpack-plugin": "10.2.4",
     "css-loader": "6.6.0",
+    "cypress": "^11.0.0",
     "eslint": "8.10.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-plugin-fsd-arch-path": "^0.0.14",
