--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "storybook:build": "build-storybook -c ./config/storybook",
     "prepare": "husky install",
     "add:slice": "node .\\scripts\\createSlice\\index.js",
-    "postinstall": "rimraf ./node_modules/.cache"
+    "postinstall": "rimraf ./node_modules/.cache",
+    "remove-feature": "ts-node ./scripts/remove-feature.ts"
   },
   "keywords": [],
   "author": "",
